@@ -1,6 +1,7 @@
 2013-09-08  Ulrich Müller  <ulm@gentoo.org>
 
 	* keyword-generation.sh (OBSOLETE): Cleanup list.
+	(ECLASSES): Strip filename suffix and sort the list of eclasses.
 
 2013-07-07  Ulrich Müller  <ulm@gentoo.org>
 
